--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using yakutsa
 @using yakutsa.Models
+@using RetailCRMCore.Models
 @using yakutsa.Services
 @using Microsoft.AspNetCore.Identity
 @using yakutsa.Extensions
