--- a/Views/Home/OrderOptions.cshtml
+++ b/Views/Home/OrderOptions.cshtml
@@ -2,19 +2,18 @@
 @model CreateOrderObject
 <div class="container">
   <div class="row pt-5">
-    <div class="col-sm-12">
+    <div class="col-sm-12 mt-5">
       <h1 class="text-center">@ViewData["Title"]</h1>
     </div>
   </div>
-
-  @using (Html.BeginForm(actionName: "OrderOptions", controllerName: "Home", FormMethod.Post))
+  @using (Html.BeginForm(actionName: "OrderOptions", controllerName: "Home", FormMethod.Post, new { id = "order_configure_form" }))
   {
     <div class="row">
       <div class="col-sm-12 col-md-6 my-1">
-        @Html.TextBoxFor(m => m.firstName,null, new {@class="form-control", placeholder="Имя", required=true})
+        @Html.TextBoxFor(m => m.firstName,null, new {@class="form-control", placeholder="Имя", suggestion="fio", required=true, autocomplete="off"})
       </div>
       <div class="col-sm-12 col-md-6 my-1">
-        @Html.TextBoxFor(m => m.lastName,null, new {@class="form-control", placeholder="Фамилия", required=true})
+        @Html.TextBoxFor(m => m.lastName,null, new {@class="form-control", placeholder="Фамилия", suggestion="fio", required=true, autocomplete="off"})
       </div>
     </div>
     <div class="row">
@@ -22,63 +21,60 @@
         @Html.TextBoxFor(m => m.email,null, new {@class="form-control", placeholder="Ел. почта", required=true})
       </div>
       <div class="col-sm-12 col-md-6 my-1">
-        @Html.TextBoxFor(m => m.phone,null, new {@class="form-control", placeholder="Телефон", required=true})
+        @Html.TextBoxFor(m => m.phone,null, new {@class="form-control", placeholder="Телефон", required=true, type="tel", autocomplete="off"})
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-md-6 my-1">
-
-        @{
-          var paymentTypes = new List<SelectListItem>() { new SelectListItem { Selected = true, Text = "Способ оплаты" } };
-          foreach (var item in (PaymentType[])ViewBag.PaymentTypes)
-          {
-            paymentTypes.Add(new SelectListItem { Value = item.code, Text = item.name });
-          }
-        }
-
-        @Html.ListBoxFor(m=> m.paymentType, paymentTypes, new { @class="form-select"})
-
-        @*  <select id="inputState" class="form-select">
-          <option selected>Способ оплаты</option>
-          @foreach (DeliveryType item in ViewBag.DeliveryTypes)
-          {
-          <option>@item.name</option>
-          }
-          </select>*@
-      </div>
-      <div class="col-sm-12 col-md-6 my-1">
-        @{
-          var deliveryTypes = new List<SelectListItem>() { new SelectListItem { Selected = true, Text = "Способ доставки" } };
-          foreach (var item in (DeliveryType[])ViewBag.DeliveryTypes)
-          {
-            deliveryTypes.Add(new SelectListItem { Value = item.code, Text = item.name });
-          }
-        }
-
-        @Html.ListBoxFor(m=> m.deliveryType, deliveryTypes, new { @class="form-select"})
-
-        @*  <select id="inputState" class="form-select">
-          <option selected>Способ доставки</option>
-          @foreach (DeliveryType item in ViewBag.DeliveryTypes)
-          {
-          <option>@item.name</option>
-          }
-          </select>*@
+      <div class="col-sm-12">
       </div>
     </div>
-    @* <div class="row my-1">
-      <div class="col">
-      @Html.TextBoxFor(m => m.address,null, new {@class="form-control", placeholder="Ел. почта", required=true})
+    <div class="row">
+      <div class="col-sm-12 my-1">
+        @Html.HiddenFor(m => m.paymentType, new { name="paymentTypeCode" })
+        @Html.TextBoxFor(m => m.address.text,null, new {@class="form-control", placeholder="Адрес", suggestion="address", required=true, autocomplete="off"})
       </div>
-      <div class="col">
-      @Html.TextBoxFor(m => m.phone,null, new {@class="form-control", placeholder="Телефон", required=true})
-      </div>
-      </div>*@
+      <div class="col-sm-12 my-1">
+        @{
+          var deliveryTypes = new List<SelectListItem>() { new SelectListItem { Text = "Способ доставки" } };
+          foreach (var item in (DeliveryType[])ViewBag.DeliveryTypes)
+          {
+            var selected = item.code == Model?.deliveryType ? true : false;
+            deliveryTypes.Add(new SelectListItem { Value = item.code, Text = item.name, Selected = selected });
+          }
+        }
 
+        @Html.HiddenFor(m => m.deliveryType, new { name="deliveryTypeCode" })
+        @Html.DropDownListFor(m=> m.deliveryType, deliveryTypes, new { @class="form-select",size=1, required = true})
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 my-1">
+        @Html.TextAreaFor(m => m.comment, new { name="comment" , rows=7, @class="w-100", style="font-size: 1rem;", placeholder="Комментарий к заказу"})
+      </div>
+    </div>
     <div class="btn-anim my-1 d-block mx-auto">
       <input type="submit" class="btn btn-main" value="далее" />
     </div>
   }
-
 </div>
 
+
+<div id="payment_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="payment_modalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen-xl-down modal-xl">
+    <div class="modal-content">
+      <div class="modal-body p-0">
+        <iframe style="min-height: 700px;width: 100%;" frameborder="0" allowfullscreen="" allow="payment"></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  function showPaymentModal(url){
+      $('#payment_modal').modal('show');
+      $('#payment_modal iframe').attr('src', url);
+          $('#payment_modal button').click(function () {
+              $('#payment_modal iframe').removeAttr('src');
+          });
+      }
+</script>
