--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -22,13 +22,14 @@
   @* <link rel="preload" href="~/fonts/Batman.ttf" as="font" onload="this.rel='stylesheet'">*@
   <link async rel="preload" href="~/lib/bootstrap/dist/css/bootstrap.css" as="style" onload="this.rel='stylesheet'">
   <link async rel="preload" href="~/lib/fancybox/jquery.fancybox.css" as="style" onload="this.rel='stylesheet'">
-  <link async rel="preload" href="~/css/site.css" as="style" onload="this.rel='stylesheet'">
   <link async rel="preload" href="~/lib/toolkit.min.css" as="style" onload="this.rel='stylesheet'">
+  <link async rel="preload" href="~/css/site.css" as="style" onload="this.rel='stylesheet'">
 
   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="~/lib/fancybox/jquery.fancybox.css">
-  <link rel="stylesheet" href="~/css/site.css">
+  <link rel="stylesheet" href="~/css/suggestion.css">
   <link rel="stylesheet" href="~/lib/toolkit.min.css" />
+  <link rel="stylesheet" href="~/css/site.css">
 
   <style>
     body.loading main, body.loading aside, header.loading {
@@ -41,8 +42,12 @@
   <script src="~/lib/fontawesome/49a24c4a0e.js"></script>
 </head>
 <body class="busy">
+  @{
+    bool isDevelopment = true;
+  }
   @if (!Startup.Environment.IsDevelopment())
   {
+    isDevelopment = false;
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -60,6 +65,10 @@
     <!-- /Yandex.Metrika counter -->
   }
 
+  <script>
+    const isDevelopment = '@isDevelopment' == 'True' ? true : false;
+  </script>
+
   <header class="loading">
     <nav class="top-bar">
       <div>
@@ -76,7 +85,7 @@
         }
         <div class="position-relative text-center mt-3 mx-2">
           <i class="fas fa-bars mx-auto d-block my-4 fa-2x" data-bs-toggle="modal" href="#menu_modal" role="button"></i>
-          <a href="@Url.ActionLink("CartView", "Home")">
+          <a href="@Url.ActionLink("Cart", "Home")">
             <i class="fas fa-shopping-cart mx-auto d-block fa-2x" count="@ViewData["count"]" role="button"></i>
           </a>
         </div>
@@ -87,31 +96,51 @@
       <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="menu_modal_Toggle_Label">header</h5>
+            <h5 class="modal-title" id="menu_modal_Toggle_Label">Меню</h5>
             <i class="fas fa-times fa-2x" aria-hidden="true" data-bs-dismiss="modal"></i>
           </div>
           <div class="modal-body">
-            body...
+            <div class="container h-100">
+              <div class="row h-75 align-items-center">
+                <div class="col-12 col-sm-6">
+                  <ul style="text-align: left;list-style: none;">
+                    <li class="my-1">
+                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/#catalog">каталог</a>
+                    </li>
+                    <li class="my-1">
+                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/">о нас</a>
+                    </li>
+                    <li class="my-1">
+                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/DeliveryRules">доставка</a>
+                    </li>
+                    <li class="my-1">
+                      <a class="btn btn-main" style="font-size: 40px;color: #8b8b8b;" href="/PaymentRules">оплата</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 col-sm-6">
+                </div>
+              </div>
+            </div>
+
           </div>
-          <div class="modal-footer">
+          @*   <div class="modal-footer">
             footer...
-          </div>
+            </div>*@
         </div>
       </div>
     </div>
   </header>
-  @*
-    <aside class="loading">
-
-    </aside>
-  *@
   <main role="main">
-    <div class="container-fluid">
+    <div class="container-fluid pb-4 px-0">
       @RenderBody()
     </div>
   </main>
 
-  <footer class="footer-dark"></footer>
+  <footer class="footer-dark">
+    <div class="container-fluid">
+    </div>
+  </footer>
 
 
   <div class="loading-cover"></div>
@@ -124,24 +153,25 @@
     }
   </div>
 
-  @{
-    await Html.RenderPartialAsync("/Views/Partials/MenuPartial.cshtml", (List<ProductGroup>)ViewBag.Menu!);
-  }
+  @* @{
+    await Html.RenderPartialAsync("/Views/Partials/CatalogMenuPartial.cshtml", (List<ProductGroup>)ViewBag.Menu!);
+    }*@
 
-  <div class="d-block toTop-toggler"><i class="fa fa-arrow-up" style="color:#0c7a01;z-index: 50;"></i></div>
+  <div class="d-block toTop-toggler"><i class="fa fa-arrow-up opacity-100" style="color:#0c7a01;z-index: 50;"></i></div>
 
   <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
   <script src="~/lib/mobile-detect.min.js" type="text/javascript"></script>
   <script src="/lib/fancybox/jquery.fancybox.js" type="text/javascript"></script>
+  <script src="~/js/labelholder.js" type="text/javascript"></script>
+  <script src="~/js/suggestion.js" type="text/javascript"></script>
   <script src="~/js/site.js" type="text/javascript"></script>
-  @* <script src="~/js/debug.js" type="text/javascript"></script>*@
   <script type="text/javascript" language="javascript">
     document.addEventListener("DOMContentLoaded", () => {
         document.querySelector('header').classList.remove('loading');
         setTimeout(()=> document.body.classList.remove('busy'),150);
     });
 
-    window.onload = function () { document.body.classList.remove('loading'); };
+    window.onload = function () { document.body.classList.remove('loading');};
       (function ($) {Initialize($);})(jQuery)
   </script>
 
